Updated code for embeddings memory issues

--- a/main.ipynb
+++ b/main.ipynb
@@ -50,9 +50,41 @@
      "text": [
       "Loading graph dataset\n",
       "Using tokenizer\n",
-      "Loading tokenizer for bert-base-cased\n",
-      "Loading data from cache: datasets/graph_data/eamodelset/edge_data/eamodelset_dist_0_neg_nsr_1_et_1_sp_1_use_emb_1_ckpt_results_eamodelset_edge_cls_type_10_att_0_nt_1_checkpoint-2200_test_0.2.pkl\n",
-      "Loading data from datasets/graph_data/eamodelset/edge_data/eamodelset_dist_0_neg_nsr_1_et_1_sp_1_use_emb_1_ckpt_results_eamodelset_edge_cls_type_10_att_0_nt_1_checkpoint-2200_test_0.2.pkl\n",
+      "Loading tokenizer for bert-base-uncased\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bdb8c6a50ff24dccabffa620aca200c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Embeddings graphs:   0%|          | 0/558 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a7ed813761bd47d583e66225342acb32",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating graphs:   0%|          | 0/558 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['AndJunction' 'ApplicationCollaboration' 'ApplicationComponent'\n",
       " 'ApplicationEvent' 'ApplicationFunction' 'ApplicationInteraction'\n",
       " 'ApplicationInterface' 'ApplicationProcess' 'ApplicationService'\n",
@@ -80,12 +112,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c305a578b8c3441a89916cdcd7596984",
+       "model_id": "1d66bfe278ca4b5881af31bd91f4f134",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Validating edge classes:   0%|          | 0/50 [00:00<?, ?it/s]"
+       "Validating edge classes:   0%|          | 0/558 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -99,8 +131,8 @@
       "Test classes: {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10}\n",
       "Number of classes in training set: 11\n",
       "Number of classes in test set: 11\n",
-      "Train edge classes: {4: 812, 10: 340, 3: 586, 7: 245, 2: 244, 8: 381, 0: 156, 9: 67, 1: 145, 5: 239, 6: 17}\n",
-      "Test edge classes: {2: 60, 10: 83, 7: 66, 0: 42, 5: 59, 4: 228, 3: 112, 8: 88, 1: 35, 9: 9, 6: 4}\n",
+      "Train edge classes: {4: 12783, 8: 5362, 7: 7065, 3: 7522, 2: 5802, 1: 3550, 10: 4397, 9: 1205, 5: 4413, 6: 692, 0: 4011}\n",
+      "Test edge classes: {4: 3109, 7: 1808, 3: 1827, 8: 1395, 5: 1049, 10: 1100, 1: 848, 0: 956, 2: 1359, 9: 301, 6: 171}\n",
       "Loaded graph dataset\n"
      ]
     }
@@ -114,16 +146,321 @@
     "    add_negative_train_samples=True,\n",
     "    neg_sampling_ratio=1,\n",
     "    distance=0,\n",
-    "    use_edge_types=True,\n",
     "    use_special_tokens=True,\n",
+    "    random_embed_dim=1,\n",
+    "    # use_edge_types=True,\n",
+    "    use_node_types=True,\n",
     "    use_embeddings=True,\n",
-    "    embed_model_name='bert-base-cased',\n",
-    "    ckpt='results/eamodelset/edge_cls/type_10_att_0_nt_1/checkpoint-2200'\n",
+    "    # embed_model_name='bert-base-cased',\n",
+    "    ckpt='results/eamodelset/lp/10_att_0_nt_0/checkpoint-177600',\n",
+    "    limit = -1,\n",
     ")\n",
     "\n",
     "print(\"Loading graph dataset\")\n",
     "graph_edge_dataset = GraphEdgeDataset(dataset, **graph_data_params)\n",
     "print(\"Loaded graph dataset\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(NumpyData(train_edge_mask=[40], test_edge_mask=[10], train_pos_edge_label_index=[2, 40], train_pos_edge_label=[40], train_neg_edge_label_index=[2, 40], train_neg_edge_label=[40], test_pos_edge_label_index=[2, 10], test_pos_edge_label=[10], test_neg_edge_label_index=[2, 10], test_neg_edge_label=[10], overall_edge_index=[2, 50], edge_index=[2, 40], num_nodes=62, num_edges=50, x=[62, 832], edge_attr=[50, 768], node_type=[62], node_layer=[62], edge_type=[50]),\n",
+       " GraphData(train_edge_mask=[40], test_edge_mask=[10], train_pos_edge_label_index=[2, 40], train_pos_edge_label=[40], train_neg_edge_label_index=[2, 40], train_neg_edge_label=[40], test_pos_edge_label_index=[2, 10], test_pos_edge_label=[10], test_neg_edge_label_index=[2, 10], test_neg_edge_label=[10], overall_edge_index=[2, 50], edge_index=[2, 40], num_nodes=62, num_edges=50, x=[62, 832], edge_attr=[50, 768], node_type=[62], node_layer=[62], edge_type=[50]))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph_edge_dataset.graphs[0].data, graph_edge_dataset[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texts_data = graph_edge_dataset[0].get_link_prediction_texts('type', 'lp')\n",
+    "texts_data['test_pos_edges'][:20], texts_data['test_neg_edges'][:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'datasets/graph_data/eamodelset/edge_data_dist_0_neg_nsr_1_nt_1_sp_1_use_emb_1_ckpt_results_eamodelset_lp_10_att_0_nt_0_checkpoint-177600_test_0.2/9256ec1b11002dd708b621c9cf26616b/data.pkl'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph_edge_dataset.file_paths[dataset[0].hash]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch_dataset = graph_edge_dataset.get_torch_dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([62, 1]), torch.Size([2, 40]), torch.Size([50, 1]))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch_dataset[0].x.shape, torch_dataset[0].edge_index.shape, torch_dataset[0].edge_attr.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GraphData(train_edge_mask=[40], test_edge_mask=[10], train_pos_edge_label_index=[2, 40], train_pos_edge_label=[40], train_neg_edge_label_index=[2, 40], train_neg_edge_label=[40], test_pos_edge_label_index=[2, 10], test_pos_edge_label=[10], test_neg_edge_label_index=[2, 10], test_neg_edge_label=[10], overall_edge_index=[2, 50], edge_index=[2, 40], num_nodes=62, num_edges=50, node_type=[62], node_layer=[62], edge_type=[50], x=[62, 1], edge_attr=[50, 1])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch_dataset[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Loss: 20.1870\n",
+      "Average Test Accuracy: 0.8861\n",
+      "Epoch 2, Loss: 19.4412\n",
+      "Average Test Accuracy: 0.8885\n",
+      "Epoch 3, Loss: 19.1393\n",
+      "Average Test Accuracy: 0.8865\n",
+      "Epoch 4, Loss: 19.1695\n",
+      "Average Test Accuracy: 0.8885\n",
+      "Epoch 5, Loss: 19.2538\n",
+      "Average Test Accuracy: 0.8878\n",
+      "Epoch 6, Loss: 19.2151\n",
+      "Average Test Accuracy: 0.8877\n",
+      "Epoch 7, Loss: 19.0947\n",
+      "Average Test Accuracy: 0.8873\n",
+      "Epoch 8, Loss: 19.1740\n",
+      "Average Test Accuracy: 0.8876\n",
+      "Epoch 9, Loss: 19.2315\n",
+      "Average Test Accuracy: 0.8875\n",
+      "Epoch 10, Loss: 19.1580\n",
+      "Average Test Accuracy: 0.8869\n",
+      "Epoch 11, Loss: 19.2266\n",
+      "Average Test Accuracy: 0.8882\n",
+      "Epoch 12, Loss: 19.1967\n",
+      "Average Test Accuracy: 0.8867\n",
+      "Epoch 13, Loss: 19.2607\n",
+      "Average Test Accuracy: 0.8866\n",
+      "Epoch 14, Loss: 19.2285\n",
+      "Average Test Accuracy: 0.8868\n",
+      "Epoch 15, Loss: 19.2100\n",
+      "Average Test Accuracy: 0.8881\n",
+      "Epoch 16, Loss: 19.2172\n",
+      "Average Test Accuracy: 0.8886\n",
+      "Epoch 17, Loss: 19.2189\n",
+      "Average Test Accuracy: 0.8867\n",
+      "Epoch 18, Loss: 19.1475\n",
+      "Average Test Accuracy: 0.8864\n",
+      "Epoch 19, Loss: 19.2123\n",
+      "Average Test Accuracy: 0.8890\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm.auto import tqdm\n",
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "from models.gnn_layers import *\n",
+    "from torch_geometric.loader import DataLoader\n",
+    "from torch_geometric.nn import SAGEConv, GATv2Conv\n",
+    "\n",
+    "\n",
+    "class GNNLinkPredictor(torch.nn.Module):\n",
+    "    def __init__(self, in_channels, hidden_channels):\n",
+    "        super(GNNLinkPredictor, self).__init__()\n",
+    "        self.conv1 = SAGEConv(in_channels, hidden_channels)\n",
+    "        self.conv2 = SAGEConv(hidden_channels, hidden_channels)\n",
+    "        self.link_predictor = torch.nn.Sequential(\n",
+    "            torch.nn.Linear(2 * hidden_channels, hidden_channels),\n",
+    "            torch.nn.ReLU(),\n",
+    "            torch.nn.Linear(hidden_channels, 2)  # Two output classes: True or False\n",
+    "        )\n",
+    "\n",
+    "    def encode(self, x, edge_index):\n",
+    "        x = F.relu(self.conv1(x, edge_index))\n",
+    "        x = self.conv2(x, edge_index)\n",
+    "        return x\n",
+    "\n",
+    "    def decode(self, z, edge_index):\n",
+    "        src, dst = edge_index\n",
+    "        edge_features = torch.cat([z[src], z[dst]], dim=1)\n",
+    "        return self.link_predictor(edge_features)\n",
+    "\n",
+    "    def forward(self, x, edge_index, edge_pos):\n",
+    "        z = self.encode(x, edge_index)\n",
+    "        return self.decode(z, edge_pos)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def train(model, data, optimizer):\n",
+    "    model.train()\n",
+    "    optimizer.zero_grad()\n",
+    "\n",
+    "    # Use the training positive and negative edges\n",
+    "    edge_pos = data.train_pos_edge_label_index\n",
+    "    edge_neg = data.train_neg_edge_label_index\n",
+    "\n",
+    "    # Combine positive and negative edges\n",
+    "    edge_index = torch.cat([edge_pos, edge_neg], dim=1)\n",
+    "    labels = torch.cat([torch.ones(edge_pos.size(1)), torch.zeros(edge_neg.size(1))]).long().to(data.x.device)\n",
+    "\n",
+    "    # Forward pass\n",
+    "    out = model(data.x, edge_pos, edge_index)\n",
+    "    loss = F.cross_entropy(out, labels)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    return loss.item()\n",
+    "\n",
+    "\n",
+    "@torch.no_grad()\n",
+    "def test(model, data):\n",
+    "    model.eval()\n",
+    "\n",
+    "    # Evaluate on test positive and negative edges\n",
+    "    edge_pos = data.test_pos_edge_label_index\n",
+    "    edge_neg = data.test_neg_edge_label_index\n",
+    "    edge_index = torch.cat([edge_pos, edge_neg], dim=1)\n",
+    "    labels = torch.cat([torch.ones(edge_pos.size(1)), torch.zeros(edge_neg.size(1))]).long().to(data.x.device)\n",
+    "\n",
+    "    # Forward pass\n",
+    "    out = model(data.x, edge_pos, edge_index)\n",
+    "    pred = out.argmax(dim=1)  # Get predicted class (0 or 1)\n",
+    "    accuracy = (pred == labels).sum().item() / labels.size(0)\n",
+    "    return accuracy\n",
+    "\n",
+    "\n",
+    "def run(dataloader, num_epochs=100):\n",
+    "\t# Training loop\n",
+    "\tfor epoch in range(1, num_epochs):\n",
+    "\t\tloss = 0\n",
+    "\t\tfor data in dataloader:  # Iterate over each graph in the dataset\n",
+    "\t\t\tdata = data.to(device)\n",
+    "\t\t\tloss += train(model, data, optimizer)\n",
+    "\t\t\n",
+    "\t\tprint(f'Epoch {epoch}, Loss: {loss:.4f}')\n",
+    "\n",
+    "\t\t# Test loop\n",
+    "\t\ttotal_accuracy = 0\n",
+    "\t\tfor data in dataloader:\n",
+    "\t\t\tdata = data.to(device)\n",
+    "\t\t\ttotal_accuracy += test(model, data)\n",
+    "\t\taverage_accuracy = total_accuracy / len(dataloader)\n",
+    "\t\tprint(f'Average Test Accuracy: {average_accuracy:.4f}')\n",
+    "\n",
+    "\n",
+    "hidden_channels = 32\n",
+    "\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "model = GNNLinkPredictor(in_channels=torch_dataset[0].x.shape[-1], hidden_channels=hidden_channels).to(device)  # Adjust input size accordingly\n",
+    "\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
+    "dataloader = DataLoader(torch_dataset, batch_size=16, shuffle=True)\n",
+    "run(dataloader, num_epochs=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(int,\n",
+       "            {'train_positive': 56802,\n",
+       "             'train_negative': 56802,\n",
+       "             'test_positive': 13923,\n",
+       "             'test_negative': 13923})"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "\n",
+    "edges = defaultdict(int)\n",
+    "\n",
+    "for graph in graph_edge_dataset:\n",
+    "\tpos_edge_idx = graph.data.edge_index\n",
+    "\ttrain_pos_edge_index = pos_edge_idx\n",
+    "\ttrain_neg_edge_index = graph.data.train_neg_edge_label_index\n",
+    "\ttest_pos_edge_index = graph.data.test_pos_edge_label_index\n",
+    "\ttest_neg_edge_index = graph.data.test_neg_edge_label_index\n",
+    "\n",
+    "\tassert set((a, b) for a, b in train_pos_edge_index.T.tolist()).issubset(set(graph.graph.numbered_graph.edges()))\n",
+    "\tassert set((a, b) for a, b in test_pos_edge_index.T.tolist()).issubset(set(graph.graph.numbered_graph.edges()))\n",
+    "\n",
+    "\tassert len(set(graph.graph.numbered_graph.edges()).intersection(set((a, b) for a, b in test_neg_edge_index.T.tolist()))) == 0\n",
+    "\tassert len(set(graph.graph.numbered_graph.edges()).intersection(set((a, b) for a, b in train_neg_edge_index.T.tolist()))) == 0\n",
+    "\n",
+    "\tassert len(set((a, b) for a, b in train_pos_edge_index.T.tolist()).intersection(set((a, b) for a, b in test_neg_edge_index.T.tolist()))) == 0\n",
+    "\tassert len(set((a, b) for a, b in train_pos_edge_index.T.tolist()).intersection(set((a, b) for a, b in test_neg_edge_index.T.tolist()))) == 0\n",
+    "\n",
+    "\tedges['train_positive'] += train_pos_edge_index.size(1)\n",
+    "\tedges['train_negative'] += train_neg_edge_index.size(1)\n",
+    "\tedges['test_positive'] += test_pos_edge_index.size(1)\n",
+    "\tedges['test_negative'] += test_neg_edge_index.size(1)\n",
+    "\n",
+    "edges\n"
    ]
   },
   {
