--- a/main.ipynb
+++ b/main.ipynb
@@ -196,7 +196,154 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading graph dataset\n",
+      "Using tokenizer\n",
+      "Loading tokenizer for bert-base-uncased\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ec46fc4c757549cfaaa6a7d92daa8e97",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating Embeddings:   0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b86f0dd772f14d6091716ff8287ae914",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Creating graphs:   0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ApplicationCollaboration' 'ApplicationComponent' 'ApplicationEvent'\n",
+      " 'ApplicationFunction' 'ApplicationInteraction' 'ApplicationInterface'\n",
+      " 'ApplicationProcess' 'ApplicationService' 'Artifact' 'Assessment'\n",
+      " 'BusinessActor' 'BusinessCollaboration' 'BusinessEvent'\n",
+      " 'BusinessFunction' 'BusinessInteraction' 'BusinessInterface'\n",
+      " 'BusinessObject' 'BusinessProcess' 'BusinessRole' 'BusinessService'\n",
+      " 'Capability' 'CommunicationNetwork' 'Constraint' 'Contract'\n",
+      " 'CourseOfAction' 'DataObject' 'Deliverable' 'Device'\n",
+      " 'DistributionNetwork' 'Driver' 'Equipment' 'Facility' 'Gap' 'Goal'\n",
+      " 'Grouping' 'ImplementationEvent' 'Junction' 'Location' 'Material'\n",
+      " 'Meaning' 'Node' 'Outcome' 'Path' 'Plateau' 'Principle' 'Product'\n",
+      " 'Representation' 'Requirement' 'Resource' 'Stakeholder' 'SystemSoftware'\n",
+      " 'TechnologyCollaboration' 'TechnologyEvent' 'TechnologyFunction'\n",
+      " 'TechnologyInteraction' 'TechnologyInterface' 'TechnologyProcess'\n",
+      " 'TechnologyService' 'Value' 'ValueStream' 'WorkPackage']\n",
+      "Setting num_nodes_ type 61\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "960b8da71353404f998c6ca7108bf92e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating node classes:   0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train classes: {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60}\n",
+      "Test classes: {0, 1, 3, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 21, 22, 25, 26, 27, 29, 33, 34, 37, 40, 41, 44, 47, 48, 49, 50, 51, 56, 57}\n",
+      "Number of classes in training set: 60\n",
+      "Number of classes in test set: 37\n",
+      "['application' 'business' 'implementation_migration' 'motivation' 'other'\n",
+      " 'strategy' 'technology']\n",
+      "Setting num_nodes_ layer 7\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "551e129b93e24019bb720f5d60e17d02",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating node classes:   0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train classes: {0, 1, 2, 3, 4, 5, 6}\n",
+      "Test classes: {0, 1, 2, 3, 4, 5, 6}\n",
+      "Number of classes in training set: 7\n",
+      "Number of classes in test set: 7\n",
+      "Edge Classes:  ['Access' 'Aggregation' 'Assignment' 'Association' 'Composition' 'Flow'\n",
+      " 'Influence' 'Realization' 'Serving' 'Specialization' 'Triggering']\n",
+      "Node label: type\n",
+      "Train Node classes: {7: 53, 16: 43, 10: 32, 51: 8, 50: 34, 3: 84, 1: 96, 6: 74, 25: 58, 5: 29, 9: 23, 19: 15, 34: 19, 33: 35, 40: 22, 47: 15, 49: 15, 57: 20, 17: 67, 56: 1, 29: 14, 22: 9, 18: 27, 55: 3, 21: 2, 4: 2, 36: 7, 42: 6, 37: 2, 46: 5, 45: 5, 13: 52, 0: 2, 2: 9, 15: 5, 41: 14, 44: 10, 8: 2, 26: 1, 12: 9, 14: 14, 11: 3, 20: 2, 24: 2, 28: 1, 30: 1, 54: 1, 31: 1, 59: 1, 58: 1, 52: 1, 39: 1, 27: 2, 43: 1, 53: 1, 35: 1, 60: 1, 38: 1, 23: 1, 32: 1}\n",
+      "Test Node classes: {7: 7, 10: 12, 16: 12, 51: 1, 11: 3, 6: 21, 25: 12, 3: 27, 1: 25, 57: 3, 50: 14, 40: 8, 34: 3, 18: 11, 19: 6, 29: 4, 47: 4, 17: 13, 49: 4, 9: 7, 0: 2, 33: 5, 13: 15, 5: 6, 15: 2, 44: 2, 41: 3, 22: 2, 8: 2, 27: 1, 14: 7, 12: 1, 21: 1, 37: 1, 56: 1, 48: 1, 26: 1}\n",
+      "Node label: layer\n",
+      "Train Node classes: {0: 407, 1: 278, 6: 107, 3: 137, 4: 28, 2: 5, 5: 5}\n",
+      "Test Node classes: {0: 100, 1: 82, 6: 31, 4: 4, 3: 31, 5: 1, 2: 1}\n",
+      "Loaded graph dataset\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "56bfb16e29884cb297f7b4ef7c4c6eee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Getting node classification data:   0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokenizing data\n",
+      "['<node_label>POE <edge_begin>type:Flow<edge_end> <node_label>TESP Power BI\\n<node_label>POE <edge_begin>type:Flow<edge_end> <node_label>PET', '<node_label>Spare Parts Contract', '<node_label>WIN <edge_begin>type:Flow<edge_end> <node_label>PET', '<node_label>Non-disclosure Agreement (NDA)', '<node_label>Letter of Intent (LOI)', '<node_label>Out of Scope: Financial Planning Tool', '<node_label>Memorandum of Understanding (Mo U)', '<node_label>PET <edge_begin>type:Flow<edge_end> <node_label>Lab Ops PTT\\n<node_label>PET <edge_begin>type:Flow<edge_end> <node_label>POE', '<node_label>Client <edge_begin>type:Flow<edge_end> <node_label>WIN', '<node_label>TESP Power BI <edge_begin><edge_end> <node_label>PET']\n",
+      "['<node_label>Lab Ops PTT <edge_begin><edge_end> <node_label>TESP Power BI\\n<node_label>Lab Ops PTT <edge_begin>type:Flow<edge_end> <node_label>Out of Scope: Financial Planning Tool', '<node_label>TESP <edge_begin>type:Flow<edge_end> <node_label>PET', '<node_label>Employment Contract', '<node_label>Web Form Custom <edge_begin>type:Serving<edge_end> <node_label>Http Adapter service\\n<node_label>Web Form Custom <edge_begin>type:Serving<edge_end> <node_label>Http Form Service', '<node_label>Web Hook Public Node <edge_begin>type:Serving<edge_end> <node_label>Http Adapter service', '<node_label>General Store <edge_begin>type:Serving<edge_end> <node_label>Core Service', '<node_label>Collaboration', '<node_label>set POSITION=0 <edge_begin>type:Access<edge_end> <node_label>current position', '<node_label>current position', '<node_label>get iterator from aggregate <edge_begin>type:Flow<edge_end> <node_label>next item in iterator']\n",
+      "967\n",
+      "967\n",
+      "250\n",
+      "250\n"
+     ]
+    }
+   ],
    "source": [
     "from data_loading.graph_dataset import GraphNodeDataset\n",
     "\n",
@@ -206,7 +353,7 @@
     "    distance=1,\n",
     "    random_embed_dim=1,\n",
     "    use_attributes=True,\n",
-    "    use_node_types=True,\n",
+    "    # use_node_types=True,\n",
     "    use_edge_label=True,\n",
     "    use_edge_types=True,\n",
     "    use_special_tokens=True,\n",
@@ -217,6 +364,21 @@
     "    limit = 20,\n",
     ")\n",
     "\n",
+    "    # graph_data_params = dict(\n",
+    "    #     distance=args.distance,\n",
+    "    #     reload=args.reload,\n",
+    "    #     test_ratio=args.test_ratio,\n",
+    "    #     use_attributes=args.use_attributes,\n",
+    "    #     use_node_types=args.use_node_types,\n",
+    "    #     use_edge_types=args.use_edge_types,\n",
+    "    #     use_edge_label=args.use_edge_label,\n",
+    "    #     use_special_tokens=args.use_special_tokens,\n",
+    "    #     no_labels=args.no_labels,\n",
+    "    #     node_cls_label=args.cls_label,\n",
+    "    #     use_embeddings=args.use_embeddings,\n",
+    "    #     embed_model_name=args.embed_model_name,\n",
+    "    #     ckpt=args.ckpt,\n",
+    "    # )\n",
     "\n",
     "\n",
     "print(\"Loading graph dataset\")\n",
