Added support for Word2vec + TFIDF Embedders

--- a/main.ipynb
+++ b/main.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "399d9bfa7fea431da30dd663cdb11473",
+       "model_id": "40f8a49e628d4838b3959d91667567e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -70,7 +70,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64629d2668cf4324a5000cad34ceb281",
+       "model_id": "a7a357069e2a44c4a4ba010fab943ad8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1686a8097a0c44468ab9b32ffb2f2d44",
+       "model_id": "12a21a4c36154c7f976419868ab89239",
        "version_major": 2,
        "version_minor": 0
       },
@@ -139,7 +139,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c46fad363ed4e5e86ef65881ae8d9eb",
+       "model_id": "bcf17c731dbe4838bdbbffd733e644b7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f11ce6c28f5a4345a1a25be0a1cd8347",
+       "model_id": "3db6958fabbc491b871472e05f170fa2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -219,7 +219,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c6db250e207480fb23d858465cf62d7",
+       "model_id": "eaefe647c72342458730467e867d0081",
        "version_major": 2,
        "version_minor": 0
       },
@@ -256,7 +256,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a831a92ede5f4bd78fb689857b19c555",
+       "model_id": "c2d15df71b7a4cf5811b0adcaa0c53f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -283,7 +283,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b778a74cfa047b0b36eb3d09fa8b5e5",
+       "model_id": "461555170f684697a337904ed75c06f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -316,7 +316,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f64410bd1d84a0cb0af32f9086fda70",
+       "model_id": "76c707d063ca41faba6bbf26d2da7b11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -385,22 +385,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "46019"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(data)"
+    "texts = sum([v for k, v in data.items() if k.startswith('train') and not k.endswith('classes')], [])"
    ]
   },
   {
@@ -527,6 +527,66 @@
     "\ty_pred_nn = y_pred_nn.numpy()\n",
     "\tprint(\"Neural Network Classification Report:\")\n",
     "\tprint(classification_report(y_test, y_pred_nn))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from settings import W2V_CONFIG\n",
+    "from gensim.models import Word2Vec\n",
+    "import torch\n",
+    "from typing import List, Union\n",
+    "from embeddings.common import Embedder\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "\n",
+    "class TFIDFEmbedder(Embedder):\n",
+    "    def __init__(self, texts: List[str]):\n",
+    "        print(\"TFIDFEmbedder: Training TF-IDF model\")\n",
+    "        self.model = TfidfVectorizer()\n",
+    "        self.model.fit(texts)\n",
+    "        print(\"TFIDFEmbedder: Model trained\")\n",
+    "\n",
+    "    @property\n",
+    "    def embedding_dim(self) -> int:\n",
+    "        return len(self.model.get_feature_names_out())\n",
+    "    \n",
+    "    def embed(self, text: Union[str, List[str]]):\n",
+    "        if isinstance(text, str):\n",
+    "            text = [text]\n",
+    "        return torch.tensor(self.model.transform(text).toarray()[0])\n",
+    "\n",
+    "class Word2VecEmbedder(Embedder):\n",
+    "    def __init__(self, texts: List[str]):\n",
+    "        print(\"Word2VecEmbedder: Training Word2Vec model\")\n",
+    "        self.model = Word2Vec(texts, **W2V_CONFIG)\n",
+    "        print(\"Word2VecEmbedder: Word2Vec model trained\")\n",
+    "\n",
+    "    @property\n",
+    "    def embedding_dim(self) -> int:\n",
+    "        return self.model.vector_size\n",
+    "    \n",
+    "    def embed(self, text: Union[str, List[str]]):\n",
+    "        if isinstance(text, str):\n",
+    "            text = text.split()\n",
+    "        word_vectors = [self.model.wv[word] for word in text if word in self.model.wv]\n",
+    "        if word_vectors:\n",
+    "            return torch.tensor(word_vectors).mean(dim=0)\n",
+    "        else:\n",
+    "            return torch.zeros(self.embedding_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w2v_embedder = Word2VecEmbedder(texts)\n",
+    "tfidf_embedder = TFIDFEmbedder(texts)"
    ]
   },
   {
