GNN Node Classification > Bert (Archi)

--- a/main.ipynb
+++ b/main.ipynb
@@ -405,6 +405,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'XYZ'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __init__(self, name: str):\n",
+    "        self.name = name\n",
+    "\n",
+    "class B(A):\n",
+    "    def __init__(self):\n",
+    "        super().__init__(name='XYZ')\n",
+    "\n",
+    "b = B()\n",
+    "b.name\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
