Added OntoUML Support

--- a/main.ipynb
+++ b/main.ipynb
@@ -16,16 +16,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading eamodelset from pickle\n",
-      "Loaded eamodelset with 558 graphs\n",
-      "Loaded eamodelset with 558 graphs\n",
-      "Graphs: 558\n"
+      "Loading ontouml from pickle\n",
+      "Loaded ontouml with 175 graphs\n",
+      "Loaded ontouml with 175 graphs\n",
+      "Graphs: 175\n"
      ]
     }
    ],
    "source": [
     "from utils import set_seed\n",
-    "from data_loading.models_dataset import ArchiMateModelDataset, EcoreModelDataset\n",
+    "from data_loading.models_dataset import ArchiMateDataset, EcoreDataset, OntoUMLDataset\n",
     "\n",
     "set_seed(42)\n",
     "\n",
@@ -33,35 +33,61 @@
     "    # reload=True,\n",
     "    min_enr = -1,\n",
     "    min_edges = 10,\n",
-    "    language = 'en',\n",
+    "    # language = 'en',\n",
     ")\n",
-    "dataset_name = 'eamodelset'\n",
     "\n",
-    "dataset = ArchiMateModelDataset(dataset_name, **config_params)\n",
-    "# dataset = EcoreModelDataset('modelset', **config_params)"
+    "# dataset = ArchiMateDataset('eamodelset', **config_params)\n",
+    "# dataset = EcoreModelDataset('modelset', **config_params)\n",
+    "dataset = OntoUMLDataset('ontouml', **config_params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'num_graphs': 175,\n",
+       " 'num_edges': 20220,\n",
+       " 'num_nodes': 15890,\n",
+       " 'average_nodes': '90.80',\n",
+       " 'average_edges': '115.54',\n",
+       " 'average_n2e_ratio': '0.83'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading graph dataset\n"
+      "Loading graph dataset\n",
+      "Number of duplicate graphs:  1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40f8a49e628d4838b3959d91667567e9",
+       "model_id": "2514314ef6cf4cfba8c4e93d85c64b99",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Embedding edge graphs:   0%|          | 0/558 [00:00<?, ?it/s]"
+       "Creating edge graphs:   0%|          | 0/175 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -70,12 +96,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7a357069e2a44c4a4ba010fab943ad8",
+       "model_id": "73203e7ff5374b06a49ce012ed17e39f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Creating graphs:   0%|          | 0/558 [00:00<?, ?it/s]"
+       "Embedding graphs:   0%|          | 0/174 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "701889ead07743078240a08c245a55d2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Re-Loading graphs:   0%|          | 0/174 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -85,39 +125,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['AndJunction' 'ApplicationCollaboration' 'ApplicationComponent'\n",
-      " 'ApplicationEvent' 'ApplicationFunction' 'ApplicationInteraction'\n",
-      " 'ApplicationInterface' 'ApplicationProcess' 'ApplicationService'\n",
-      " 'Artifact' 'Assessment' 'BusinessActor' 'BusinessCollaboration'\n",
-      " 'BusinessEvent' 'BusinessFunction' 'BusinessInteraction'\n",
-      " 'BusinessInterface' 'BusinessObject' 'BusinessProcess' 'BusinessRole'\n",
-      " 'BusinessService' 'Capability' 'CommunicationNetwork' 'Constraint'\n",
-      " 'Contract' 'CourseOfAction' 'DataObject' 'Deliverable' 'Device'\n",
-      " 'DistributionNetwork' 'Driver' 'Equipment' 'Facility' 'Gap' 'Goal'\n",
-      " 'Grouping' 'ImplementationEvent' 'Junction' 'Location' 'Material'\n",
-      " 'Meaning' 'Node' 'OrJunction' 'Outcome' 'Path' 'Plateau' 'Principle'\n",
-      " 'Product' 'Representation' 'Requirement' 'Resource' 'Stakeholder'\n",
-      " 'SystemSoftware' 'TechnologyCollaboration' 'TechnologyEvent'\n",
-      " 'TechnologyFunction' 'TechnologyInteraction' 'TechnologyInterface'\n",
-      " 'TechnologyProcess' 'TechnologyService' 'Value' 'ValueStream'\n",
-      " 'WorkPackage' None]\n",
-      "Setting num_nodes_ type 63\n",
-      "['application' 'business' 'implementation_migration' 'motivation' 'other'\n",
-      " 'strategy' 'technology' None]\n",
-      "Setting num_nodes_ layer 7\n",
-      "Edge Classes:  ['Access' 'Aggregation' 'Assignment' 'Association' 'Composition' 'Flow'\n",
-      " 'Influence' 'Realization' 'Serving' 'Specialization' 'Triggering']\n"
+      "['' 'abstract' 'abstract individual' 'activity' 'agent' 'atomic event'\n",
+      " 'being present at ' 'belief' 'bringsabout' 'category' 'causal'\n",
+      " 'characterization' 'collective' 'commitment' 'comparative'\n",
+      " 'complex event' 'complexaction' 'complexevent' 'componentof' 'constitute'\n",
+      " 'cr' 'crd' 'creation' 'cru' 'crud' 'datatype' 'derivation' 'disposition'\n",
+      " 'endurant' 'enumeration' 'event' 'externaldependence' 'formal' 'goal'\n",
+      " 'has part' 'historicaldependence' 'historicalrole' 'historicalrolemixin'\n",
+      " 'humanagent' 'induces' 'instantiation' 'institutionalagent' 'intention'\n",
+      " 'internal' 'kind' 'manifestation' 'material' 'material relation'\n",
+      " 'mediation' 'memberof' 'mentalmode' 'mixin' 'mode' 'natural'\n",
+      " 'nonperceivablequality' 'normative description' 'object' 'organization'\n",
+      " 'part-of' 'participation' 'participational' 'partof' 'phase' 'phasemixin'\n",
+      " 'pos-state' 'post state' 'pre-state' 'presentat' 'processual role'\n",
+      " 'proposition' 'quale' 'quality' 'quality dimension' 'quality structure'\n",
+      " 'quantity' 'r' 'relator' 'role' 'rolemixin' 'ru' 'service' 'set'\n",
+      " 'situation' 'stringnominalstructure' 'structuration' 'subcollectionof'\n",
+      " 'subkind' 'subquantityof' 'sum' 'termination' 'timepoint' 'triggers'\n",
+      " 'trope' 'type' 'ufo-b' 'ufo-c' 'viewpoint']\n",
+      "Setting num_nodes_ stereotype 97\n",
+      "Edge Classes:  [None]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12a21a4c36154c7f976419868ab89239",
+       "model_id": "096a7593d90343029f11d18dfed50890",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Validating edge classes:   0%|          | 0/558 [00:00<?, ?it/s]"
+       "Validating edge classes:   0%|          | 0/174 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -127,35 +165,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train classes: {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10}\n",
-      "Test classes: {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10}\n",
-      "Number of classes in training set: 11\n",
-      "Number of classes in test set: 11\n",
-      "Train edge classes: {4: 12829, 7: 7122, 8: 5405, 2: 5711, 3: 7522, 5: 4441, 1: 3517, 0: 3948, 10: 4429, 9: 1192, 6: 686}\n",
-      "Test edge classes: {7: 1751, 4: 3063, 3: 1827, 5: 1021, 1: 881, 0: 1019, 9: 314, 2: 1450, 10: 1068, 6: 177, 8: 1352}\n",
+      "Train classes: {0}\n",
+      "Test classes: {0}\n",
+      "Number of classes in training set: 1\n",
+      "Number of classes in test set: 1\n",
+      "Train edge classes: {0: 16153}\n",
+      "Test edge classes: {0: 3947}\n",
       "Loaded graph dataset\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bcf17c731dbe4838bdbbffd733e644b7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Getting edge_cls data:   0%|          | 0/558 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Texts:  ['<node_begin>PASS<node_end><edge_begin><edge_end><node_begin>European Front office<node_end>', '<node_begin>Merchant portal data exposure<node_end><edge_begin><edge_end><node_begin>MP Reconciliation status preparation<node_end>', '<node_begin>Download Acquiring Transaction of a merchant user<node_end><edge_begin><edge_end><node_begin>Send Acq data access request to data storage location<node_end>', '<node_begin>c IAM<node_end><edge_begin><edge_end><node_begin>Broadcast Merchant data to platforms<node_end>', '<node_begin>Create contract hierarchies<node_end><edge_begin><edge_end><node_begin>Create PASS merchant hierarchy<node_end>', '<node_begin>Activate existing merchant for reconciliation<node_end><edge_begin><edge_end><node_begin>Update contract hierarchies for reconciliation<node_end>', '<node_begin>c IAM<node_end><edge_begin><edge_end><node_begin>Enable Acceptance and Acquiring data access in Acceptance applications<node_end>', '<node_begin>Transaction report (Acc & Acquiring)<node_end><edge_begin><edge_end><node_begin>Reconciliation engine<node_end>', '<node_begin>Merchant Portal<node_end><edge_begin><edge_end><node_begin>e Com Acc (WLOP)<node_end>', '<node_begin>Data Platform<node_end><edge_begin><edge_end><node_begin>Ingestion<node_end>', '<node_begin>Merchant Provisioning<node_end><edge_begin><edge_end><node_begin>Broadcast Merchant data to platforms<node_end>', '<node_begin>Reconcile e Com Acceptance and Acquiring transactions<node_end><edge_begin><edge_end><node_begin>Decide on reconciliation status<node_end>', '<node_begin>Data Platform<node_end><edge_begin><edge_end><node_begin>Merchant portal data exposure<node_end>', '<node_begin>Merchant portal data exposure<node_end><edge_begin><edge_end><node_begin>MP e Com data extraction<node_end>', '<node_begin>Merchant users boarding<node_end><edge_begin><edge_end><node_begin>Activate existing merchant for reconciliation<node_end>', '<node_begin>Ingestion<node_end><edge_begin><edge_end><node_begin>e P2 data ingestion<node_end>', '<node_begin>Merchant Portal<node_end><edge_begin><edge_end><node_begin>Transaction report (Acc & Acquiring)<node_end>', '<node_begin>Reconcile e Com Acceptance and Acquiring transactions<node_end><edge_begin><edge_end><node_begin>Compare Acquiring to acceptance transaction lifecycle status<node_end>', '<node_begin>MEPO<node_end><edge_begin><edge_end><node_begin>Create contract hierarchies<node_end>', '<node_begin>PASS<node_end><edge_begin><edge_end><node_begin>Settlements<node_end>']\n",
-      "Test Texts:  ['<node_begin>MEON<node_end><edge_begin><edge_end><node_begin>Create contract hierarchies<node_end>', '<node_begin>Download Acquiring Transaction of a merchant user<node_end><edge_begin><edge_end><node_begin>Store Acquiring transaction data<node_end>', '<node_begin>MEON<node_end><edge_begin><edge_end><node_begin>Broadcast Merchant data to platforms<node_end>', '<node_begin>WLOP<node_end><edge_begin><edge_end><node_begin>WLOP Transaction d B<node_end>', '<node_begin>Ingestion<node_end><edge_begin><edge_end><node_begin>WLOP data ingestion<node_end>', '<node_begin>Merchant portal data exposure<node_end><edge_begin><edge_end><node_begin>MP Acc data extraction<node_end>', '<node_begin>Merchant portal data exposure<node_end><edge_begin><edge_end><node_begin>MP in Store acc data extraction<node_end>', '<node_begin>Update contract hierarchies for reconciliation<node_end><edge_begin><edge_end><node_begin>Create a common merchant ID<node_end>', '<node_begin>Merchant portal data exposure<node_end><edge_begin><edge_end><node_begin>MP PASS data extraction<node_end>', '<node_begin>Activate existing merchant for reconciliation<node_end><edge_begin><edge_end><node_begin>Create a common merchant ID<node_end>', '<node_begin>entity 6<node_end><edge_begin><edge_end><node_begin>aggregate 6<node_end>', '<node_begin>aggregate 5<node_end><edge_begin><edge_end><node_begin>aggregate 6<node_end>', '<node_begin>Bounded context 1<node_end><edge_begin><edge_end><node_begin>service 1<node_end>', '<node_begin>entity 3<node_end><edge_begin><edge_end><node_begin>entity 2<node_end>', '<node_begin>entity 3<node_end><edge_begin><edge_end><node_begin>aggregate 3<node_end>', '<node_begin>entity 3<node_end><edge_begin><edge_end><node_begin>entity 5<node_end>', '<node_begin>aggregate 3<node_end><edge_begin><edge_end><node_begin>service 1<node_end>', '<node_begin>Bounded context 1<node_end><edge_begin><edge_end><node_begin>core domain (subdomain)<node_end>', '<node_begin>Bounded context 1<node_end><edge_begin><edge_end><node_begin>team 2 (low priority)<node_end>', '<node_begin>Claim Management Services<node_end><edge_begin><edge_end><node_begin>Claim received<node_end>']\n"
      ]
     }
    ],
@@ -187,7 +203,7 @@
     "graph_edge_dataset = GraphEdgeDataset(dataset, **graph_data_params)\n",
     "print(\"Loaded graph dataset\")\n",
     "\n",
-    "texts = graph_edge_dataset.get_link_prediction_texts()"
+    "# texts = graph_edge_dataset.get_link_prediction_texts()"
    ]
   },
   {
